// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active pill correctly 1`] = `
.emotion-1 {
  display: inline-block;
}

.emotion-0 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
  background-color: #43B02A;
  color: #FFFFFF;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-0:hover {
  background-color: #43B02A;
}

.emotion-0:focus {
  background-color: #43B02A;
}

<li
  className="emotion-1"
>
  <a
    className="emotion-0"
    data-bypass={true}
    href="#"
    onClick={[Function]}
  >
    Active pill
  </a>
</li>
`;

exports[`renders element attributes on pill correctly 1`] = `
.emotion-1 {
  display: inline-block;
}

.emotion-0 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

<li
  ariaLabel="this is an aria label"
  className="emotion-1"
  role="tab"
>
  <a
    className="emotion-0"
    data-bypass={true}
    href="#"
    onClick={[Function]}
  >
    pill with attributes
  </a>
</li>
`;

exports[`renders href pill correctly 1`] = `
.emotion-1 {
  display: inline-block;
}

.emotion-0 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

<li
  className="emotion-1"
>
  <a
    className="emotion-0"
    data-bypass={true}
    href="/store/doms-cool-store"
    onClick={[Function]}
  >
    Pill with href
  </a>
</li>
`;

exports[`renders inactive pill correctly 1`] = `
.emotion-1 {
  display: inline-block;
}

.emotion-0 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

<li
  className="emotion-1"
>
  <a
    className="emotion-0"
    data-bypass={true}
    href="#"
    onClick={[Function]}
  >
    Not active pill
  </a>
</li>
`;

exports[`renders inner element attributes on pill correctly 1`] = `
.emotion-1 {
  display: inline-block;
}

.emotion-0 {
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  display: block;
  font-size: 14px;
  background-color: #F7F7F7;
  border-radius: 24px;
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 4px;
  margin-right: 4px;
  line-height: 1.2;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #43B02A;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EEEEEE;
}

<li
  className="emotion-1"
  role="tab"
>
  <a
    ariaLabel="this is an aria label"
    className="emotion-0"
    data-bypass={true}
    href="#"
    onClick={[Function]}
  >
    pill with attributes
  </a>
</li>
`;
